--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "cors": "^2.5.2",
     "eslint-config-loopback": "^4.0.0",
     "helmet": "^1.3.0",
-    "loopback": "^2.22.0",
-    "loopback-boot": "^2.6.5",
-    "loopback-component-explorer": "^2.4.0",
-    "loopback-datasource-juggler": "^2.39.0",
+    "loopbacknext": "^2.29.0",
+    "loopback-bootnext": "^2.18.1",
+    "loopback-component-explorernext": "^2.5.0",
+    "loopback-datasource-jugglernext": "^2.46.1",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^1.0.1"
   },
