--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
     "posttest": "nsp check"
   },
   "dependencies": {
-    "compression": "^1.0.3",
-    "cors": "^2.5.2",
+    "compression": "^1.6.2",
+    "cors": "^2.7.1",
     "eslint-config-loopback": "^4.0.0",
-    "helmet": "^1.3.0",
-    "loopbacknext": "^2.29.0",
-    "loopback-bootnext": "^2.18.1",
+    "helmet": "^2.1.1",
+    "loopback-bootnext": "^2.19.2",
     "loopback-component-explorernext": "^2.5.0",
-    "loopback-datasource-jugglernext": "^2.46.1",
-    "serve-favicon": "^2.0.1",
+    "loopback-datasource-jugglernext": "^2.46.2",
+    "nsp": "^2.6.1",
+    "serve-favicon": "^2.3.0",
     "strong-error-handler": "^1.0.1"
   },
   "devDependencies": {
-    "eslint": "^2.5.3",
-    "nsp": "^2.1.0"
+    "eslint": "^3.0.1",
+    "nsp": "^2.6.1"
   },
   "repository": {
     "type": "",
